<resources>
    <string name="app_name">TwoBrains</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in_button">Sign In</string>
    <string name="register_button">Register</string>
    <string name="two_brains_title">TwoBrains</string>
    <string name="register_done_button">Done</string>
    <string name="register_title">Register</string>
    <string name="title_activity_menu_screen">menu_screen</string>
    <string name="title_activity_register_screen">register_screen</string>
    <string name="title_activity_matchfinder_screen">matchfinder_screen</string>
    <string name="matchfinder_string">MatchFinder</string>
    <string name="matches_string">Matches</string>
    <string name="title_activity_matches_screen">matches_screen</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="age_hint">Age</string>
    <string name="username_register_hint">Email/Username</string>
    <string name="password_register_hint">Password</string>
</resources>
