<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_register_screen"
    tools:context="com.example.pavel.twobrains.register_screen"
    android:background="#b25272f5">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailRegisterField"
        android:layout_below="@+id/ageId"
        android:layout_centerHorizontal="true"
        android:hint="@string/username_register_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordRegisterField"
        android:password="false"
        android:layout_below="@+id/emailRegisterField"
        android:layout_alignLeft="@+id/emailRegisterField"
        android:layout_alignStart="@+id/emailRegisterField"
        android:layout_marginTop="40dp"
        android:hint="@string/password_register_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/firstNameId"
        android:password="false"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/first_name_hint" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/lastNameId"
        android:password="false"
        android:hint="@string/last_name_hint"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/firstNameId" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/ageId"
        android:password="false"
        android:hint="@string/age_hint"
        android:layout_below="@+id/firstNameId"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:id="@+id/textView2"
        android:textSize="35sp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_done_button"
        android:id="@+id/registerDoneButton"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/passwordRegisterField"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
